--- a/shakshuk/client/main.css
+++ b/shakshuk/client/main.css
@@ -1,22 +1,20 @@
-.rating {
-     unicode-bidi: bidi-override;
-     direction: rtl;
- }
-.rating > span {
-    display: inline-block;
-    position: relative;
-    width: 1.1em;
-}
-.rating > span:hover:before,
-.rating > span:hover ~ span:before {
-    content: "\2605";
-    position: absolute;
-}
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+#map {
+    height: 100%;
+}
+.header{
+    width: 100%;
+    height: 10%;
 
+}
 * {margin: 0; padding: 0;}
 
-div {
+.list{
     margin: 20px;
 }
 
