--- a/Hackathon_css.css
+++ b/Hackathon_css.css
@@ -1,39 +1,33 @@
-.dropbtn {
+.stripe1 {
+    background: transparent;
+    margin: 0 0;
+}
 
+.font-text{
+    font-family: 'Roboto', sans-serif;
+}
+
+.dropdown-1{
+    background: transparent;
+}
+
+.img {
+
+    background-image: url("https://www.google.co.il/maps/@32.0766127,34.7796028,15z?hl=pt-BR");
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    height:100%;
+}
+
+.container-fluid {
+    margin-left: 80px;
+}
+
+.navbar-inverse .navbar-nav>li>a {
     color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
 }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+.margin-title{
+    margin-top: 150px;
 }
