--- a/Estee.css
+++ b/Estee.css
@@ -1,74 +1,34 @@
-.text{
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-}
-
-.imgshuk {
-     height: 300px;
-    display: inline-block;
-}
 
 .img{
+    height: 300px;
+    background-color: transparent;
     background-image: url('https://format-com-cld-res.cloudinary.com/image/private/s--X0pBdzWi--/c_limit,g_center,h_1200,w_65535/a_auto,fl_keep_iptc.progressive,q_95/171984-9635667-Portfolio_Fabi_Kocubey_17_jpg.jpg');
     background-size: cover;
     background-position: center;
     text-align: center;
     height: 100%;
-    background-repeat: no-repeat;
-    width: 100%;
-    height:600px;
 }
 
-.comments {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    display: inline-block;
-    color: white;
+.rating-margin{
+    margin-bottom: 100px;
+}
+.comment-margin{
+    margin-top: 60px;
 }
 
-.stripe1{
-    display: inline-block;
-    display: table-cell;
-    vertical-align: middle;
-    margin-top: 10px;
+html, body {
+    height: 100%;
+ background-color: transparent;
 }
-
-.content-holder{
-    display: table;
-    margin: auto;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-
-}
-
-.content-holder .imgshuk{
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.rectangle{
-    margin-left: 150px;
-    padding: 10px 0px;
-}
-
-.info{
-    font-size: 25px;
-    font-family:Roboto;
-    color: white;
-}
-
 
 .acidjs-rating-stars,
-.acidjs-rating-stars label::before
-{
+.acidjs-rating-stars label::before {
     display: inline-block;
 }
 
 .acidjs-rating-stars label:hover,
 .acidjs-rating-stars label:hover ~ label {
-    color: greenyellow;
+    color: #ffffff;
 }
 
 .acidjs-rating-stars * {
@@ -76,8 +36,8 @@
     padding: 0;
 }
 
-.acidjs-rating-stars input
-{  display: none;
+.acidjs-rating-stars input {
+    display: none;
 }
 
 .acidjs-rating-stars {
@@ -85,9 +45,23 @@
     direction: rtl;
 }
 
-.acidjs-rating-stars label
-{
-    color: #cfcfcf;
+.acidjs-rating-stars label {
+    color: #ffffff;
+}
+
+.acidjs-rating-stars input:checked ~ label {
+    color: #000000;
+}
+
+.acidjs-rating-disabled {
+    opacity: .50;
+    -webkit-pointer-events: none;
+    -moz-pointer-events: none;
+    pointer-events: none;
+}
+
+.margin-top{
+    margin-top:50px;
 }
 
 .acidjs-rating-stars label::before {
@@ -98,16 +72,21 @@
     font-size: 40px;
     cursor: pointer;
     padding: 0 20px;
-    /*margin-left: 10px 5px;*/
+    margin-left: 10px 5px;
 }
 
-.acidjs-rating-stars input:checked ~ label {
-    color: white;
+.comment-margin {
+    color: black;
+    margin-top: -50px;
 }
 
-.acidjs-rating-disabled {
-    /*opacity: .50;*/
-    -webkit-pointer-events: none;
-    -moz-pointer-events: none;
-    pointer-events: none;
+.button-sendit{
+    color: black;
+}
+
+.comments {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-style: italic;
+
 }
